spacing in firefox fixed

--- a/edit_profile2/style.css
+++ b/edit_profile2/style.css
@@ -8,6 +8,16 @@ body{
     font-weight: normal;
 }
 
+br { 
+    display: block; 
+    margin: 6px 0; 
+    } 
+     
+br + br { 
+    display: none; 
+} 
+
+
 /* for preloader */
 .spinner-wrapper {
     position: fixed;
